--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,20 @@
 /*end general reset*/
 
 /*general styles*/
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: "Nunito", sans-serif;
     min-height: 100vh;
-    scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
+}
+
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 header, footer{
@@ -48,6 +58,7 @@ li a:active{
 
 /*CARD STYLING*/
 .container{
+    flex-grow: 1;
     padding: 2rem;
     display: grid;
     grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
@@ -55,6 +66,7 @@ li a:active{
 }
 
 .card{
+    scroll-margin-top: 9rem;
     background-color: whitesmoke;
     border: 2px solid gray;
     border-radius: 2rem;
@@ -62,6 +74,11 @@ li a:active{
     flex-direction: column;
     align-items: center;
     padding: 1rem;
+}
+
+.card p{
+    text-align: center;
+    margin-top: 0.2rem;
 }
 
 .card img{
@@ -82,12 +99,14 @@ footer{
 
 
 /*media queries*/
+
     /*SMALL*/
 @media screen and (min-width: 576px) {
     body{
         background-color: green;
         background-image: radial-gradient(whitesmoke, green)
     }
+    
    /*  nav{
         display: none;
     } */
